Ru bundle update

--- a/resources/assets/bundles/bundle_ru.properties
+++ b/resources/assets/bundles/bundle_ru.properties
@@ -5,17 +5,23 @@ mod.ol.disclaimer.text = [accent]Omaloon-mod[] [red]еще в разработк
 mod.ol.ok = Ладно
 mod.ol.doNotShowItAgain = Не показывать это окно снова
 
+mod.ol.updater.tile = Найдена новая версия!
+mod.ol.updater = Найдена новая версия [#87ceeb]Omaloon[]! \nСкорее всего, добавлен новый контет или исправлены ошибки. Рекомендуется установить новую версию. \n\n[gray]Текущая версия Omaloon v{0}, последняя v{1}[]
+mod.ol.updater.load = Установить сейчас!
+mod.ol.updater.changes = Список изменений
+mod.ol.updater.later = Напомнить позже
+
 mod.ol.name = [#87ceeb]Omaloon[]
 mod.ol.author = [#fed27f]S[][#fed27f]t[][#a9aabf]a[][#7e96df]B[][#7090ea]U[], TheEE145, Zelaux
-mod.ol.contributors = [#7f7f7f]Помощники:[] \n[#735384]Dj Silin[], [#e4b400]MissionaryPoseBest[], [#3498db]SUS[], yesC48, TheEE145.
-mod.ol.description = [#badbeb]Первый мод, сделанный xStaBUx для Mindustry. Добавляет в основном уникальный контент.[]
+mod.ol.contributors = [#7f7f7f]Помощники:[] \n[#735384]Dj Silin[], [#e4b400]MissionaryPoseBest[], [#3498db]SUS[], yesC48, [#008A00]Uuj[#FFFF00]uju[][].
+mod.ol.description = [accent]Mindustry[] [#badbeb]модификация направлена на расширение кампании путем добавления новой звездной системы. \n[][red]В активной разработке. Пока не годится для игры за пределами песочницы.
 mod.ol.musics = [#7f7f7f]Музыкальное сопровождение:[] \nСкоро будет!
 
 mod.ol.subtitle1 = [#87ceeb]Хехе
 mod.ol.subtitle2 = [#87ceeb]Я живой!
 mod.ol.subtitle3 = [#87ceeb]:З
 mod.ol.subtitle4 = [#87ceeb]Сообщество!
-mod.ol.subtitle5 = [#87ceeb]Among the winds
+mod.ol.subtitle5 = [#87ceeb]Среди ветров
 
 mod.ol.omaloon-settings = Omaloon
 
@@ -25,19 +31,33 @@ ol.discord-join = Присоединяйтесь к Omaloon в Discord!
 setting.mod.ol.show.name = Скрыть окно предупреждения
 setting.mod.ol.show.description = Убирает окно предупреждения, которое появляется после запуска игры.
 
+setting.mod.ol.check.name = Проверять наличие обновлений
+setting.mod.ol.check.description = Если включено, [#87ceeb]Omaloon[] автоматически будет проверять себя наличие обновлений при запуске Mindustry \nі будет сообщать вам, если найдете доступное обновление.
+
+setting.mod.ol.pressureupdate.name = Частота обновления для давления
+setting.mod.ol.pressureupdate.description = Если вы замечаете ухудшение производительности игры, используя систему давления,\n увеличивайте значение, пока производительность игры не станет лучше.
+setting.mod.ol.pressureupdate.possible-bugs =  тики(ов), возможны баги
+setting.mod.ol.pressureupdate.ticks =  тики(ов)
+
 ###Planets
 planet.ol-omaloon.name = Омалун[red][скрыто][]
-planet.ol-omaloon.description = Планета в другой звездной системе. Холодная звезда не дает ей достаточно тепла, поэтому на поверхности планеты царит вечная зима.
-planet.ol-omaloon.details = [orange]Лучшая планета из всех.
 
 planet.ol-amsha.name = Амша[red][скрыто][]
-planet.ol-amsha.description = Самостоятельная звезда, являющаяся центром системы Амши.
 
 ###Items
 
 item.ol-grumon.name = Грумон
 item.ol-grumon.description = Используется в обороне и производстве.
 item.ol-grumon.details = Металл с мощными магнитными возможностями.
+
+item.ol-magnetic-combination.name = Магнитная комбинация
+item.ol-magnetic-combination.description = Используется в транспортировке и проекторах.
+
+item.ol-zarini.name = Зариний
+item.ol-zarini.description = Используется в специальных типах боеприпасов и усовершенствованной конструкции подразделений.
+
+item.ol-valkon.name = Валькон
+item.ol-valkon.description = Используется в строительстве единиц и сложных сооружений.
 
 item.ol-omalite.name = Омалит
 item.ol-omalite.description = Используется для производства энергии и боеприпасов.
@@ -47,30 +67,25 @@ item.ol-omalite-alloy.name= Омалитовый сплав
 item.ol-omalite-alloy.description = Широко используется в сооружениях.
 item.ol-omalite-alloy.details= Холодный и слаборадиоактивный сплав.
 
-item.ol-magnetic-combination.name = Магнетическая комбинация
-item.ol-magnetic-combination.description = Используется для транспортировки и проекторов.
-
-item.ol-zarini.name = Зариний
-item.ol-zarini.description= Используется в специальных видах боеприпасов и в конструкции передовых единиц.
-
-item.ol-valkon.name = Валькон
-item.ol-valkon.description= Используется в строительстве единиц и передовых конструкций.
-
 ###Liquids
+
+liquid.ol-dalanii.name = Даланит
+liquid.ol-dalanii.description = Используется для производства предметов.
+liquid.ol-dalanii.details = Подозрительно скользкий.
+
+liquid.ol-angeirum.name = Ангейрум
+liquid.ol-angeirum.description = Используется в некоторых заводах и для поддержания давления во 2-м уровне.
+liquid.ol-angeirum.details = Падает дождем на дно кратеров, смешиваясь с водой и остатками "Сета". Вернуть ангерум из этой смеси крайне тяжело.
 
 liquid.ol-liquid-omalite.name = Омалитовая жидкость
 liquid.ol-liquid-omalite.description = Употребляется для охлаждения более мощных реакторов и заводов.
 liquid.ol-liquid-omalite.details = Холодный.
 
-liquid.ol-dalanite.name = Даланит
-liquid.ol-dalanite.description = Используется для производства предметов. Обычно распыляют на врагов.
-
 ###Blocks
 
-block.ol-gravel.name = Гравий
-block.ol-gravel-dalanite.name = Гравий с даланитом
-block.ol-flor-dalanite.name = Даланит
-block.ol-deep-dalanite.name = Глубокий даланит
+block.ol-gravel-dalanii.name = Гравий с даланитом
+block.ol-flor-dalanii.name = Даланит
+block.ol-deep-dalanii.name = Глубокий даланит
 
 block.ol-omalite-alloy-wall.name = Стена из омалитового сплава
 block.ol-omalite-alloy-wall.description = Защищает постройки от вражеских снарядов. Замораживает единицы, имеющие лазерное оружие, если они ударят стену. Сверхпрочная. Не горит.
@@ -78,35 +93,101 @@ block.ol-omalite-alloy-wall.description = Защищает постройки о
 block.ol-omalite-alloy-wall-large.name = Большая стена из омалитового сплава
 block.ol-omalite-alloy-wall-large.description = Защищает постройки от вражеских снарядов. Замораживает единицы, имеющие лазерное оружие, если они ударят стену. Сверхпрочная. Не горит.
 
-block.ol-test-joint.name = Тестовый соединительный блок
+block.ol-zarini-wall.name = Заривая модульная стена
+block.ol-zarini-wall.description = Защищает постройки от вражеских снарядов. Стены совмещаются между собой.
+
+block.ol-tungsten-wall.name = Вольфрамовая модульная стена
+block.ol-tungsten-wall.description = Защищает постройки от вражеских снарядов. Стены совмещаются между собой.
+
+block.ol-mechanical-compressor.name = Механический компрессор
+block.ol-mechanical-compressor.description = Создает давление, необходимое для работы некоторых заводов и турелей.
+
+block.ol-electric-compressor.name = Електричний компресор
+block.ol-electric-compressor.description = Создает давление, необходимое для работы некоторых заводов и турелей.
+
+block.ol-sandbox-compressor.name = Творческий компрессор
+block.ol-sandbox-compressor.description = Создает давление, необходимое для работы некоторых заводов и турелей. Можно настроить. 0 – режим вакуума. Только песочница.
+
+block.ol-pressure-pipe.name = Труба для давления
+block.ol-pressure-pipe.description = Передает давление.
+
+block.ol-improved-pressure-pipe.name = Улучшенная труба для давления
+block.ol-improved-pressure-pipe.description = Передает давление.
+
+block.ol-reinforced-pressure-pipe.name = Упрочненная труба для давления
+block.ol-reinforced-pressure-pipe.description = Передает давление.
+
+block.ol-pressure-counter.name = Счетчик
+block.ol-pressure-counter.description = Показывает давление в системе с помощью стрелки. Передает давление.
+
+block.ol-improved-pressure-counter.name = Улучшенный счетчик
+block.ol-improved-pressure-counter.description = Показывает давление в системе с помощью стрелки. Передает давление.
+
+block.ol-reinforced-pressure-counter.name = Укрепленный счетчик
+block.ol-reinforced-pressure-counter.description = Показывает давление в системе с помощью стрелки. Передает давление.
+
+block.ol-pressure-junction.name = Перекресток для давления
+block.ol-pressure-junction.description = Модификатор труб. Действует как мост между двумя перекрестными трубами для давления. Можно устанавливать только трубы для давления.
+
+block.ol-pressure-bridge.name = Мост для давления
+block.ol-pressure-bridge.description = Передает давление через здание или местность.
+
+block.ol-improved-pressure-bridge.name = Улучшенный мост для давления
+block.ol-improved-pressure-bridge.description = Передает давление через здание или местность.
+
+block.ol-reinforced-pressure-bridge.name = Укрепленный мост для давления
+block.ol-reinforced-pressure-bridge.description = Передает давление через здание или местность.
 
 block.ol-multi-factory.name = Мультифабрика
-block.ol-multi-factory.description = Имеет 3 рецепта создания предметов. Рецепты можно изменять. Уникальная конструкция этого блока позволяет производить предметы почти с одинаковой скоростью.
+block.ol-multi-factory.description = Имеет 3 рецепта для создания предметов. Рецепты можно изменять. Уникальная конструкция этого блока позволяет создавать разные предметы почти с одинаковой скоростью.
 
-block.ol-centrifuge.name = Омалитовая центрифуга
-block.ol-centrifuge.description = Производит крепкий омалитовый сплав из омалита и титана. Нуждается в охлаждении. В процессе изготовления производит небольшое количество энергии.
+block.ol-zarini-boiler.name = Зариниевой котел
+block.ol-zarini-boiler.description = Испаряет данное собирая осадок на грумонит.
+
+block.ol-valcon-press.name = Валькониевый пресс
+block.ol-valcon-press.description = Сдавливает вольфрам и зариний под высоким давлением..
 
 block.ol-fuser.name = Разбавитель
-block.ol-fuser.description = Растворяет омалит путем медленного перемешивания в воде ингредиентов, чтобы получить омалитовую жидкость.
+block.ol-fuser.description = Смешивает омолит с водой.
+
+block.ol-centrifuge.name = Омалитовая центрифуга
+block.ol-centrifuge.description = Сочетает омалит с титаном путем расцепления и прессования в центрифуге. При разгоне производит немного энергии.
 
 block.ol-hyper-receiver.name = Омалитная солнечная панель
-block.ol-hyper-receiver.description = Собирает энергию солнца. Нуждается в омалитовой жидкости для функционирования.
+block.ol-hyper-receiver.description = Собирает энергию солнца. Нуждается в омалитовой жидкости.
 
-block.ol-freezing.name = Синяя ночь
-block.ol-freezing.description = Стреляет заряженными снарядами из омалитовой жидкости в наземных противников, замораживая и делая их более уязвимыми для взрывов. Усовершенствованная система самонаведения не дает врагам шанса убежать.
+block.ol-freezing.name = Заморозка
+block.ol-freezing.description = Выстреливает в наземных врагов заряженными снарядами из омалитовой жидкости, замораживая и делая их более уязвимыми к взрывам. Усовершенствованная система самонаведения не дает врагам шанса убежать.
+block.ol-tau.name = Тау
+block.ol-tau.description = Выстреливает энергетическими залпами в воздушные противники.
 
 ###StusEffects
 status.ol-slime.name = Покрытый слизью
 
 ###Bars
-bar.acceleration = Разгон
-bar.liquid-capacity = Жидкости:
+bar.acceleration = Разгон:
+bar.pressureEfficient = Давление: {0} ({1}%)
+bar.pressure = Давление:
 
 ###Stats
+category.pressure = Давление
+
+stat.pressure = Давление:
+stat.tier = Уровень
+stat.pressure-consume = Потребление давления
+stat.pressure-production = Производство давления
+stat.max-pressure = Максимальное давление
+
+stat.requirements = Рецепты
+
+stat.damage-share = Доля ущерба
+
 stat.magnetic = Магнитная восприимчивость
+
 stat.average-surface-temperature = Средняя температура поверхности
 stat.radius = Радиус
 stat.orbit-radius = Радиус орбиты
 
-unit.kelvins = [#bfbfbf]К(кельвин)[]
+unit.pressure = Атм
+unit.kelvins = [#bfbfbf]K(кельвинов)[]
 unit.kilometers = [#bfbfbf]км³[]
