Something-and-fixes-by-chatGTP

--- a/resources/assets/bundles/bundle_pt_BR.properties
+++ b/resources/assets/bundles/bundle_pt_BR.properties
@@ -92,11 +92,11 @@ block.ol-omalite-alloy-wall.description = Protege construções de balas inimiga
 block.ol-omalite-alloy-wall-large.name = Parede de Liga de Omalite Larga
 block.ol-omalite-alloy-wall-large.description = Protege construções de balas inimigas. Congelam unidades que atiram lasers se eles acertarem a parede. Resiliente. Não queima.
 
-block.ol-zarini-wall.name = Parede Modular de Zarini
-block.ol-zarini-wall.description = Proteje construções de projéteis. As paredes combinam entre si.
+block.ol-modular-zarini-wall.name = Parede Modular de Zarini
+block.ol-modular-zarini-wall.description = Proteje construções de projéteis. As paredes combinam entre si.
 
-block.ol-tungsten-wall.name = Parede Modular de Tungstênio
-block.ol-tungsten-wall.description = Proteje construções de projéteis. As paredes combinam entre si.
+block.ol-modular-tungsten-wall.name = Parede Modular de Tungstênio
+block.ol-modular-tungsten-wall.description = Proteje construções de projéteis. As paredes combinam entre si.
 
 ## produção
 block.ol-multi-factory.name = Multi Fabrica
