--- a/resources/assets/bundles/bundle_uk_UA.properties
+++ b/resources/assets/bundles/bundle_uk_UA.properties
@@ -11,6 +11,10 @@ mod.ol.updater.load = Встановити зараз!
 mod.ol.updater.changes = Список змін
 mod.ol.updater.later = Нагадати пізніше
 
+mod.ol.crash-report-dialog.name = О ні!
+mod.ol.crash-report-dialog.description = Схоже, ви натрапили на [accent]помилку[] в Omaloon. \nВи можете повідомити про цю помилку розробникам Omaloon, щоб вони могли її виправити. \nДопоможіть зробити Omaloon кращим!
+mod.ol.report = Повідомити про помилку
+
 mod.ol.name = [#87ceeb]Omaloon[]
 
 mod.ol.author = [#fed27f]S[][#fed27f]t[][#a9aabf]a[][#7e96df]B[][#7090ea]U[], TheEE145, Zelaux
@@ -34,6 +38,12 @@ setting.mod.ol.show.description = Вимикає вікно попереджен
 
 setting.mod.ol.check.name = Перевіряти на наявність оновлень
 setting.mod.ol.check.description = Якщо ввімкнено, [#87ceeb]Omaloon[] автоматично перевірятиме себе наявність оновлень під час запуску Mindustry \nі повідомлятиме вас, якщо знайде доступне оновлення.
+
+setting.mod.ol.clarrows.name = Лічильники мають кольорові стрілки [red] (необхідне перезавантаження)[]
+setting.mod.ol.clarrows.description = Якщо ввімкнено, стрілки лічильників тиску матимуть \nколір, який залежить від значення тиску.
+
+setting.mod.ol.check-crashes.name = Шукати збої, спричинені Omaloon.
+setting.mod.ol.check-crashes.description = Якщо ввімкнено, Omaloon буде проводити \nперевірку останнього збою гри. Якщо збій викликаний Omaloon, \nвам буде запропоновано повідомити про це розробникам Omaloon \nпід час наступного запуску гри.
 
 setting.mod.ol.pressureupdate.name = Частота оновлення для тиску
 setting.mod.ol.pressureupdate.description = Якщо ви помічаєте погіршення продуктивності гри використовуючи систему тиску,\nзбільшуйте значення допоки продуктивність гри не стане краще.
