Create a new categories?

--- a/resources/assets/bundles/bundle_uk_UA.properties
+++ b/resources/assets/bundles/bundle_uk_UA.properties
@@ -42,13 +42,11 @@ setting.mod.ol.check.description = Якщо ввімкнено, [#87ceeb]Omaloon
 setting.mod.ol.clarrows.name = Лічильники мають кольорові стрілки
 setting.mod.ol.clarrows.description = Якщо ввімкнено, стрілки лічильників тиску\nматимуть колір, який залежить від\nзначення тиску.\n[gray](необхідне перезавантаження)[]
 
-setting.mod.ol.check-crashes.name = Шукати збої, спричинені Omaloon.
+setting.mod.ol.check-crashes.name = Шукати збої, спричинені Omaloon
 setting.mod.ol.check-crashes.description = Якщо ввімкнено, Omaloon буде проводити\nперевірку останніх збоїв гри.\nЯкщо збій викликаний Omaloon,\nвам буде запропоновано повідомити про це\nрозробникам Omaloon під час наступного\nзапуску гри.
 
-setting.mod.ol.pressureupdate.name = Частота оновлення для тиску
-setting.mod.ol.pressureupdate.description = Якщо ви помічаєте погіршення продуктивності гри використовуючи систему тиску,\nзбільшуйте значення допоки продуктивність гри не стане краще.
-setting.mod.ol.pressureupdate.possible-bugs =  тики(ів), можливі баги
-setting.mod.ol.pressureupdate.ticks =  тики(ів)
+setting.mod.ol.category.name = Створювати нові категорії
+setting.mod.ol.category.description = Якщо ввімкнено, створює нову категорію у\nвікні розміщення для блоків системи тиску.\n[red]Попередження! Нові категорії можуть\nвикликати конфлікти з іншими модами![]\n[gray](необхідне перезавантаження)[]
 
 ###Planets
 planet.ol-omaloon.name = Омалун [red][приховано][]
