fix erekir blocks on crater.msav

--- a/assets/bundles/bundle_uk_UA.properties
+++ b/assets/bundles/bundle_uk_UA.properties
@@ -104,7 +104,7 @@ tc.hail-timer=\
 
 tc.press=\
   Поки град триває, переконайтеся, що ви захистили\
-  \всі свої будівлі, та організуйте\
+  \nвсі свої будівлі, та організуйте\
   \nвиробництво \uC356[#8691b3] карборунду[].
 
 tc.core=\
