--- a/assets/bundles/bundle_uk_UA.properties
+++ b/assets/bundles/bundle_uk_UA.properties
@@ -11,7 +11,17 @@ dialog.omaloon-updater = \
   Скоріш за все Omaloon отримав оновлення контенту чи виправлення хиб. Рекомендуємо встановити це оновлення.\
   \n[red]Після оновлення, усі ваші збереження з Omaloon буде стерто![]\
   \n\n[gray]Поточна версія Omaloon v{0}, проте остання v{1}.[]
-button.omaloon-update-later = Ігнорувати
+
+dialog.omaloon-update-cleanup.title = Omaloon оновлено!
+dialog.omaloon-update-cleanup.text = \
+  Omaloon було оновлено з версії [accent]v{0}[] до [accent]v{1}[]!\n\
+  \nМи рекомендуємо виконати повне очищення вашої кампанії та досліджень Omaloon для найкращого досвіду та щоб уникнути пошкоджених збережень.\
+  \nАльтернативно, ви можете увімкнути Безпечне Очищення, яке видалить недозволений вміст і дослідження, зберігаючи ваш прогрес, але ви все ще можете зіткнутися з пошкодженими збереженнями.\
+  \n\n[scarlet]Ігнорування цього може призвести до значних проблем у ваших збереженнях та ігровому досвіді.[]
+
+button.omaloon-ignore = Ігнорувати
+button.omaloon-update-cleanup.softclean = Увімкнути безпечне очищення
+button.omaloon-update-cleanup.fullclean = Виконати повне очищення
 button.omaloon-updater-show-changes = Змінопис
 button.omaloon-install-update = Завантажити та перезавантажити зараз?
 
