--- a/assets/bundles/bundle_zh_CN.properties
+++ b/assets/bundles/bundle_zh_CN.properties
@@ -11,7 +11,17 @@ dialog.omaloon-updater = \
   该更新可能包新内容更新和Bug修复，推荐安装最新版本。\
   \n[red]所有启用了 Omaloon 的存档会在更新后被覆盖和移除！[]\
   \n\n[gray]当前版本：v{0}，最新版本：v{1}。[]
-button.omaloon-update-later = 下次再说
+
+dialog.omaloon-update-cleanup.title = Omaloon has been updated!
+dialog.omaloon-update-cleanup.text = \
+  Omaloon has been updated from [accent]v{0}[] to [accent]v{1}[]!\n\
+  \nWe recommend performing a full cleanup of your Omaloon campaign and research for the best experience and to avoid broken saves.\
+  \nAlternatively, you can enable Safe Cleaner, which will remove not allowed content and researches while keeping your progress intact.\
+  \n\n[scarlet]Ignoring this may result in significant issues in your saves and gameplay experience.[]
+
+button.omaloon-ignore = 下次再说
+button.omaloon-update-cleanup.softclean = Enable Soft Cleaner
+button.omaloon-update-cleanup.fullclean = Full Cleanup
 button.omaloon-updater-show-changes = 更新列表
 button.omaloon-install-update = 下载安装最新版本并重新启动？
 
