--- a/assets/bundles/bundle_uk_UA.properties
+++ b/assets/bundles/bundle_uk_UA.properties
@@ -44,6 +44,8 @@ setting.omaloon-check-updates = Перевіряти наявність онов
 setting.omaloon-shield-opacity = Непрозорість укриттів
 setting.omaloon-show-disclaimer = Приховати дисклеймер
 setting.omaloon-discord-join = Приєднуйтесь до Discord сервера Omaloon!
+setting.omaloon-enable-soft-cleaner.name = Увімкнути безпечне очищення
+setting.omaloon-enable-soft-cleaner.description = Очищає вашу кампанію від небажаного контенту та досліджень.
 
 settings.omaloon-moddata = Дані Omaloon
 binding.category-omaloon-editor = Редактор
