--- a/assets/bundles/bundle_zh_CN.properties
+++ b/assets/bundles/bundle_zh_CN.properties
@@ -43,6 +43,8 @@ setting.omaloon-check-updates = 更新检查
 setting.omaloon-shield-opacity = 庇护护盾透明度
 setting.omaloon-show-disclaimer = 隐藏游戏启动警告界面
 setting.omaloon-discord-join = 加入 Omaloon 的 Discord 服务器!
+setting.omaloon-enable-soft-cleaner.name = Enable Safe Cleaner
+setting.omaloon-enable-soft-cleaner.description = Cleans your campaign from not allowed content and research.
 
 settings.omaloon-moddata = Omaloon 数据
 binding.category-omaloon-editor = 编辑器
