--- a/assets/bundles/bundle_uk_UA.properties
+++ b/assets/bundles/bundle_uk_UA.properties
@@ -55,6 +55,7 @@ settings.omaloon-resethints = Скинути підказки
 settings.omaloon-resethints-confirm = Ви справді хочете скинути поточні підказки Omaloon?
 settings.omaloon-clearresearch-confirm = Ви справді хочете стерти своє поточне дерево технологій кампанії Omaloon?
 settings.omaloon-clearcampaignsaves-confirm = Ви справді хочете стерти поточні збереження кампанії Omaloon?
+omaloon.update.dialog.fullclean.confirm = Ви справді хочете стерти ваш поточний прогрес кампанії Omaloon?
 
 ## objectives
 requirement.omaloon-at-wave = Пройдіть хвилю {0} на {1}
