--- a/assets/bundles/bundle_zh_CN.properties
+++ b/assets/bundles/bundle_zh_CN.properties
@@ -54,6 +54,7 @@ settings.omaloon-resethints = 重置提示
 settings.omaloon-resethints-confirm = 确定重置 Omaloon 的游戏内提示？
 settings.omaloon-clearresearch-confirm = 确定清除 Omaloon 的战役科技树？
 settings.omaloon-clearcampaignsaves-confirm = 确定清除 Omaloon 的战役存档？
+omaloon.update.dialog.fullclean.confirm = Are you sure you want to reset your current Omaloon campaign?
 
 ## objectives
 requirement.omaloon-at-wave =  {1} 内 达到第 {0} 波次
